BUG: 261590

Hack around CK limitations by monitoring seats and saving the last active session's ID

svn path=/trunk/KDE/kdebase/workspace/; revision=1212574